[gd_scene load_steps=9 format=2]

[ext_resource path="res://Resources/Fonts/blinker/fonts_ttf/Blinker-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/MenuScenes/MenuSceneResources/Buttons/ButtonBase/Button_Base.gd" type="Script" id=2]
[ext_resource path="res://Entities/Features/FeatureFontSizeOverrider/FeatureFontSizeOverrider.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.192157, 0.211765, 0.219608, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.192157, 0.211765, 0.219608, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.831373, 0.258824, 0.419608, 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Button_Base" type="Button"]
anchor_right = 0.0333333
anchor_bottom = 0.0592593
rect_pivot_offset = Vector2( 32, 32 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.192157, 0.211765, 0.219608, 1 )
custom_colors/font_color_hover = Color( 0.831373, 0.258824, 0.419608, 1 )
custom_colors/font_color_pressed = Color( 0.831373, 0.258824, 0.419608, 1 )
action_mode = 0
icon = ExtResource( 4 )
align = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="FeatureFontSizeOverrider" parent="." instance=ExtResource( 3 )]

[node name="Tween" type="Tween" parent="."]

[node name="Border" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 32, 32 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="." to="." method="_on_Button_Base_button_down"]
[connection signal="button_up" from="." to="." method="_on_Button_Base_button_up"]
[connection signal="item_rect_changed" from="." to="." method="_on_ButtonBase_item_rect_changed"]
[connection signal="mouse_entered" from="." to="." method="_on_ButtonBase_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_ButtonBase_mouse_exited"]
